Add _latest versions of diagnostic reports and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 /reports/*.json
 !/reports/.gitkeep
 !/reports/diagnostic_summary_*.csv
+!/reports/diagnostic_report_latest_*.json
+!/reports/diagnostic_report_latest_*.csv
 
 # Vagrant test environment files
 /test_env/.vagrant/
