Feat: 진단 스크립트 개선 및 로그 기능 추가

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 !/reports/diagnostic_report_latest_*.csv
 !/reports/diagnostic_summary_latest_*.csv
 
+# Log files
+/logs/
+
 # Vagrant test environment files
 /test_env/.vagrant/
 
