--- a/test_env/Vagrantfile
+++ b/test_env/Vagrantfile
@@ -69,4 +69,7 @@ Vagrant.configure("2") do |config|
   #   iex ((New-Object System.Net.WebClient).DownloadString('https://chocolatey.org/install.ps1'))
   # SHELL
 
+  config.vm.provision "shell", path: "provisioning/install_features.ps1"
+  config.vm.provision "shell", path: "provisioning/configure_vulnerabilities.ps1"
+
 end
